--- a/frontend/src/components/cvbuilder/cvbuilder.css
+++ b/frontend/src/components/cvbuilder/cvbuilder.css
@@ -1,6 +1,6 @@
 .main-container, .form-container {
     display: grid;
-    grid-template-columns: 66% 33%;
+    grid-template-columns: 65% 35%;
     grid-template-rows: auto;
     margin: 0 auto;
 }
@@ -35,18 +35,18 @@
     font-weight: 300;
     color: #262AD1;
     line-height: .3em;
-}
+    margin: 35px 0 10px;
+} 
 .welcome-user h2 {
-    font-size: 1.75em;
+    font-size: 2.25em;
     display: inline-block;
     font-weight: 400;
-    text-transform: uppercase;
     color: #321880;
     line-height: 1.25em;
 }
 .welcome-user h3 {
     color: #565674;
-    padding-top: 5px;
+    margin: 15px 0 10px;
     font-weight: 400;
     line-height: 1.25em;
 }
@@ -84,18 +84,17 @@
     grid-area: secondary_info;
 }
 .secondary-info__form {
-    max-width: 90%;
-    margin: 10px auto;
+    padding-top: 5px;
+    max-width: 80%;
+    margin: 0 auto 55px;
 }
-.secondary-info legend {
-    color: #FE5F55;
-    font-weight: 400;
-    font-size: 1.25em;
+.secondary-info__form legend {
+    color: gray;
+    font-size: 1.5em;
+    line-height: 1em;
+    font-weight: 200;
 }
-.technical-skills, .languages {
-    margin-top: 30px;
-    padding-top: 10px;
-}
+
 /* General */
 h1, h2, h3, legend, p {
     text-align: left;
@@ -128,7 +127,7 @@ h1, h2, h3, legend, p {
 }
 .icon-button__add {
     color: #9999C1;
-    margin-top: -10px;
+    margin-top: -9px;
 }
 .icon-button__remove {
     color: rgba(254, 95, 85,1);
