--- a/frontend/src/components/hello/Hello.css
+++ b/frontend/src/components/hello/Hello.css
@@ -4,8 +4,9 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  transform: translate(50%, 70%);
-  background-color: turquoise;
+  transform: translate(50%, 50%);
+  background-color: rgba(1, 4, 24, 0.02);
+  padding: 20px 40px;
 }
 
 h1 {
@@ -19,7 +20,6 @@ h1 {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  background-color: violet;
 }
 
 /* Buttons */
