--- a/frontend/src/components/about/About.css
+++ b/frontend/src/components/about/About.css
@@ -26,7 +26,7 @@
 /* Form container items */
 .about-user__questions { grid-area: section; }
 .about-user__interests { grid-area: aside; }
-.form-about .about-nav { grid-area: nav; }
+.form-about .nav-about{ grid-area: nav; }
 
 .navigation {
   width: 80%;
@@ -43,11 +43,11 @@ h1.about-title {
   margin: 80px 0 10px;
 }
 h2.about-questions__text {
-  margin: 10px 0;
   font-size: 1.35em;
   font-weight: 400;
   color: #321880;
   line-height: 1.3em;
+  padding-bottom: 15px;
 }
 .about-title, .about-user__questions { 
   padding-right: 40px;
@@ -70,7 +70,7 @@ h3.about-interests__title {
   font-weight: 600;
 }
 .checkbox-wrapper {
-  margin: 15px 0;
+  margin: 20px 0;
   display: flex;
   justify-content: left;
 }
@@ -85,10 +85,6 @@ h3.about-interests__title {
 }
 .info {
   margin: 20px auto;
-}
-/* Navigation Bar */
-.about-nav {
-  padding-top: 80px;
 }
 .btn-nav {
   display: block;
@@ -108,4 +104,11 @@ h3.about-interests__title {
   cursor: pointer;
   text-align: center;
   text-decoration: none;
+}
+/* Navigation Bar */
+.nav-about {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 100px;
 }
