--- a/frontend/src/components/hello/Hello.css
+++ b/frontend/src/components/hello/Hello.css
@@ -1,32 +1,19 @@
 .hello {
-  width: 50%;
+  width: 60%;
   display: "flex";
   flex-direction: column;
-  text-align: center;
-  justify-content: center;
-  transform: translate(50%, 50%);
-  background-color: rgba(1, 4, 24, 0.02);
-  padding: 20px 40px;
+  margin: 0 auto;
 }
-
-h1 {
-  text-align: center;
-  padding: 10px 0;
-}
-
 .form-hello {
-  width: 100%;
+  margin-top: 120px;
+  width: 95%;
   display: "flex";
-  align-items: center;
   flex-direction: column;
-  justify-content: center;
 }
-
 /* Buttons */
 .btn-hello {
   display: block;
   color: #262ad1;
-  background-color: white;
   border: 1px solid rgba(63, 81, 181, 0.5);
   border-radius: 3px;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -40,4 +27,41 @@ h1 {
   width: 30%;
   cursor: pointer;
   text-align: center;
+}
+.textField {
+  width: 100%;
+  margin-top: 5px;
+  border-radius: 0.5em;
+}
+/* Text Styles for Hello */
+.hello-title{
+  font-size: 4.25em;
+  color: #262ad1;
+  font-weight: 400;
+}
+.hello-title span {
+  color: #262ad1;
+  font-weight: 800;
+}
+.hello-title, .hello-text {
+  line-height: 1.15em;
+}
+.hello-text {
+  font-weight: 400;
+  font-size: 1.75em;
+  margin-bottom: 50px;
+}
+.hello-FirstName, .hello-LastName {
+  font-size: 1.25em;
+  font-family: 'Montserrat', sans-serif;
+  color: #262ad1;
+}
+.LastName-field {
+  margin-top: 20px;
+}
+.nav-hello {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 100px;
 }
