--- a/frontend/src/components/setAccount/SetAccount.css
+++ b/frontend/src/components/setAccount/SetAccount.css
@@ -41,7 +41,7 @@ h1.account-title {
   font-weight: 300;
   color: #262AD1;
   line-height: 1.1;
-  margin: 60px 50px 10px;
+  margin: 60px 100px 10px;
 }
 .account-content {
   width: 100%;
@@ -71,6 +71,9 @@ h1.account-title {
   right: 0px;
   margin-bottom: 20px;
 }
-.navigation {
+.nav-account {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   padding-top: 100px;
 }
