--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,3 +36,24 @@ code {
 .date-picker {
   width: 100%;
 }
+
+/* Button SPA Styles *provisional* */
+.btn-link {
+  display: block;
+  color: coral;
+  background-color: white;
+  border: 1px solid rgba(63, 81, 181, 0.5);
+  border-radius: 3px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.75;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+  margin: 0 10px;
+  padding: 5px;
+  width: 20%;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+}
