Update - Chip Selector and Rating Skills

--- a/frontend/src/components/multiplechipselector/MultipleSelect.css
+++ b/frontend/src/components/multiplechipselector/MultipleSelect.css
@@ -1,6 +1,7 @@
 .chip {
     margin-top: 5px;
     margin-right: 5px;
+    background-color: rgba(63, 81, 181, 0.15);
 }
 .multipleSelect {
     width: 100%; 
