--- a/frontend/src/components/ratingselector/rating.css
+++ b/frontend/src/components/ratingselector/rating.css
@@ -1,7 +1,18 @@
 .rating-box {
+    margin-top: 7px;
     display: flex;
+    align-items: center;
 }
-
 .ratingLabel {
     color: royalblue;
+}
+.MuiRating-root {
+    padding-left: 10px;
+}
+
+.rating-box > span {
+    font-family: 'Roboto', sans-serif;
+    font-size: .9em;
+    display: inline-flexbox;
+    width: 100%;
 }
