Styles update, mistypes

--- a/frontend/src/components/cvbuilder/cvbuilder.css
+++ b/frontend/src/components/cvbuilder/cvbuilder.css
@@ -111,20 +111,22 @@ h1, h2, h3, legend, p {
 /* Buttons */
 .btn-submit {
     display: block;
-    color: #262AD1;
-    background-color: white;
-    border: 1px solid rgba(63, 81, 181, 0.5);
-    border-radius: 3px;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-    font-weight: 500;
+    color: whitesmoke;
+    background-color: rgba(63, 81, 181, 1);
+    border: none;
+    border-radius: 30px;
+    font-weight: 400;
     font-size: 0.875rem;
     line-height: 1.75;
-    letter-spacing: 0.02857em;
-    text-transform: uppercase;
-    margin: 20px auto;
-    padding: 5px;
+    margin: 15px auto;
+    padding: 7px;
     width: 70%;
     cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+}
+.btn-submit:hover {
+    background-color: #321880;
 }
 .icon-button__add {
     color: #9999C1;
