--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -33,7 +33,6 @@
   margin: 15% auto;
   display: flex;
   flex-direction: column;
-  padding: 1em 2em .5em;
   min-width: 20em;
   max-width: 25em;
   background-color: #fff;
@@ -41,14 +40,17 @@
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
 }
 /* Sign in Modal */
+.modal-signin {
+  padding: 2em 2em .5em;
+}
 .modal-signin > form > p {
   font-size: .85em;
+  line-height: 0;
 }
 .modal-signin > form > p ~ p {
-  font-size: 1.15em;
+  font-size: 1.5em;
   line-height: 0;
   color: #321880;
-  font-weight: 600;
 }
 .username, .password {
   width: 100%;
@@ -70,9 +72,9 @@
 }
 /* LinkedIn Modal */
 .modal-linkedIn {
+  padding: 1em 2em .5em;
   max-width: 30em;
 }
-
 /* Buttons */
 .btn-signin,
 .btn-primary_linkedin,
@@ -83,7 +85,7 @@
   color: whitesmoke;
   background-color: rgba(63, 81, 181, 1);
   border: none;
-  border-radius: 2px;
+  border-radius: 30px;
   font-weight: 400;
   font-size: 0.875rem;
   line-height: 1.75;
