Logo position fixed

--- a/frontend/src/components/hello/Hello.css
+++ b/frontend/src/components/hello/Hello.css
@@ -46,5 +46,7 @@
   padding-top: 80px;
 }
 .branding-hello {
-  max-width: 185px;
+  max-width: 132px;
+  margin-left: 69.1%;
+  margin-top: 16.6px;
 }
