Second Implementation of Responsive Version

--- a/frontend/src/components/hello/hello_responsive.css
+++ b/frontend/src/components/hello/hello_responsive.css
@@ -35,7 +35,8 @@
         padding-top: 80px;
       }
       .branding-hello {
-        margin-top: 25px;
+        margin-top: 20px;
+        margin-right: 20px;
         max-width: 120px;
       }
 }
