--- a/frontend/src/components/setAccount/setacc_responsive.css
+++ b/frontend/src/components/setAccount/setacc_responsive.css
@@ -1,28 +1,35 @@
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) { 
+@media only screen and (max-width: 600px) {
+    .branding_acc {
+      display: block !important;
+      margin-top: 20px;
+      margin-right: 20px;
+      max-width: 120px;
+    }
     .account {
-        max-width: 100%;
+        max-width: 85%;
         grid-template-columns: 100%;
         grid-template-rows: auto;
         margin: 0 auto;
       }
       .account {
-        min-height: 100vh;
         grid-template-areas: 
         "branding"
         "title"
         "form";
       }
+      .acount-label { display: none;}
+      .acount-label_res { display: block; }
       .form-account {
         display: grid;
-        grid-template-columns: 40% 60%;
-        grid-template-rows: auto;
+        grid-template-columns: 100%;
         padding-top: 25px;
       }
       .form-account {
+        max-width: 100%;
         grid-template-areas:
-        "labels  fields"
-        "nav nav";
+        "fields"
+        "nav";
       }
       .account-title span {
         color: #321880;
@@ -32,12 +39,7 @@
         font-size: 1.75em;
         color: #262AD1;
         line-height: 1.1;
-        margin: 30px 25px 0px;
-      }
-      .account-content {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
+        margin: 30px 0px 0px;
       }
       .label-content {
         display: flex;
@@ -45,17 +47,10 @@
         position: relative;
         width: 100%;
       }
-      .textF-content {
-        display: flex;
-        justify-content: left;
-        flex-direction: column;
-      }
       .acount-label {
         font-size: 1em;
-        text-align: right;
       }
       .textField-account {
-        width: 75%;
-        margin-bottom: 4px;
-      }      
+        width: 100%;
+      }
 }
